--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chai": "^4.4.1",
     "dotenv": "^16.4.5",
     "hardhat": "^2.22.5"
   },
